--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body,
 #app {
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   background-color: var(--color-background);
@@ -26,6 +26,7 @@ body,
 #app,
 #main {
   display: grid;
+  width: 100vw;
   grid-template-rows: min-content minmax(0, 1fr);
 }
 
@@ -100,10 +101,14 @@ body,
 }
 
 #tabs {
-  padding: 8px 8px 0 8px;
+  padding: 8px 8px 0;
+  overflow-x: auto;
   display: flex;
+  gap: 8px;
   background-color: var(--color-background);
   border-top: 1px solid #7f7f7f22;
+  list-style-type: none;
+  margin: 0;
 }
 
 .tab {
